# Laboratorio6

./: CMakeLists.txt  main.c  person.c  person.h
